rust/core/src/matching/snapshots/lucid_suggest_core__matching__word__tests__match_word_full_fuzzy_deletion.snap
---
source: src/matching/word.rs
expression: "word_match(&rtext.view(0), &qtext.view(0))"
---
Some(
    (
        WordMatch {
            ix: 0,
            len: 7,
            slice: (
                0,
                7,
            ),
            typos: 1.0,
            func: false,
            fin: true,
        },
        WordMatch {
            ix: 0,
            len: 6,
            slice: (
                0,
                6,
            ),
            typos: 1.0,
            func: false,
            fin: true,
        },
    ),
)
