rust/core/src/matching/snapshots/lucid_suggest_core__matching__word__tests__match_word_full_fuzzy_insertion.snap
---
source: src/matching/word.rs
expression: "word_match(&rword, &qword, &rchars[..], &qchars[..])"
---
Some(
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 8,
            slice: (
                0,
                8,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 0,
            len: 7,
            slice: (
                0,
                7,
            ),
            function: false,
        },
        typos: 1.0,
        fin: true,
    },
)
