rust/core/src/matching/snapshots/lucid_suggest_core__matching__word__tests__match_word_full_query_too_long.snap
---
source: src/matching/word.rs
expression: "word_match(&rword, &qword1, &rchars[..], &qchars1[..])"
---
None
