rust/core/src/matching/snapshots/lucid_suggest_core__matching__word__tests__match_word_full_stem-2.snap
---
source: src/matching/word.rs
expression: "word_match(&rword, &qword2, &rchars[..], &qchars2[..])"
---
None
