rust/core/src/matching/snapshots/lucid_suggest_core__matching__word__tests__match_word_full_stem.snap
---
source: src/matching/word.rs
expression: "word_match(&rtext.view(0), &qtext1.view(0))"
---
Some(
    (
        WordMatch {
            offset: 0,
            slice: (
                0,
                8,
            ),
            subslice: (
                0,
                7,
            ),
            typos: 0.0,
            func: false,
            fin: true,
        },
        WordMatch {
            offset: 0,
            slice: (
                0,
                10,
            ),
            subslice: (
                0,
                7,
            ),
            typos: 0.0,
            func: false,
            fin: true,
        },
    ),
)
