rust/core/src/matching/snapshots/lucid_suggest_core__matching__word__tests__match_word_partial_fuzzy_insertion.snap
---
source: src/matching/word.rs
expression: "word_match(&rword, &qword, &rchars[..], &qchars[..], false)"
---
Some(
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 6,
            slice: (
                0,
                6,
            ),
            primary: true,
        },
        record: MatchSide {
            ix: 0,
            len: 7,
            slice: (
                0,
                5,
            ),
            primary: true,
        },
        typos: 1,
        fin: false,
    },
)
