rust/core/src/matching/snapshots/lucid_suggest_core__matching__word__tests__match_word_partial_fuzzy_transposition.snap
---
source: src/matching/word.rs
expression: "word_match(&rtext.view(0), &qtext.view(0))"
---
Some(
    (
        WordMatch {
            ix: 0,
            len: 7,
            slice: (
                0,
                5,
            ),
            typos: 0.5,
            func: false,
            fin: false,
        },
        WordMatch {
            ix: 0,
            len: 5,
            slice: (
                0,
                5,
            ),
            typos: 0.5,
            func: false,
            fin: false,
        },
    ),
)
