rust/core/src/matching/snapshots/lucid_suggest_core__matching__word__tests__match_word_partial_strict.snap
---
source: src/matching/word.rs
expression: "word_match(&rword, &qword, &rchars[..], &qchars[..])"
---
Some(
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 5,
            slice: (
                0,
                5,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 0,
            len: 7,
            slice: (
                0,
                5,
            ),
            function: false,
        },
        typos: 0.0,
        fin: false,
    },
)
